<resources>
    <string name="app_name">INSHAPE</string>
    <string name="welcome">Welcome</string>
    <string name="please_login_with_your_information">Please login with your information</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_with_biometrics">Login with Biometrics</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="please_register_with_your_information">Please register with your information</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="default_web_client_id">624563920991-qd3het7e0if78qvkgk72jvma50rkrnal.apps.googleusercontent.com</string>
    <string name="todays_intake">Todays Intake</string>
    <string name="_1_5l_2_0l">1.5L / 2.0L</string>
    <string name="push_up_demonstration">Push-Up Demonstration</string>
    <string name="squat_demonstration">Squat Demonstration</string>
    <string name="plank_demonstration">Plank Demonstration</string>
    <string name="bench_press_demonstration">Bench Press Demonstration</string>
    <string name="romanian_deadlift">Romanian Deadlift</string>
    <string name="bent_over_barbell_row">Bent-Over Barbell Row</string>
    <string name="keep_moving_to_achieve_your_goal">Keep moving to achieve your goal!</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="_0">0</string>
    <string name="total_steps">Total Steps</string>
    <string name="enable_biometric_authentication">Enable biometric authentication</string>
    <string name="daily_calorie_goal">Daily Calorie Goal</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="save">Save</string>
    <string name="daily_step_goal">Daily Step Goal</string>
    <string name="water_intake_goal">Water Intake Goal</string>
    <string name="calories">Calories</string>
    <string name="_250_kcal">250 kcal</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="_50g">50g</string>
    <string name="fat">Fat</string>
    <string name="_10g">10g</string>
    <string name="fibre">Fibre</string>
    <string name="_5g">5g</string>
    <string name="food">Food</string>
    <string name="avocado">Avocado</string>
    <string name="grams">Grams</string>
    <string name="_150g">150g</string>
    <string name="nutritional_information">Nutritional Information</string>
    <string name="meal_time">Meal Time</string>
    <string name="_08_00_am">08:00 AM</string>
    <string name="meal_type">Meal Type</string>
    <string name="breakfast">Breakfast</string>
    <string name="protein">Protein</string>
    <string name="_25g">25g</string>
    <string name="sugars">Sugars</string>
    <string name="_15g">15g</string>
    <string name="goal_2500_kcal">Goal: 2500 kcal</string>
    <string name="_0_kcal">0 kcal</string>
    <string name="recommended_300_g">Recommended: 300 g</string>
    <string name="_0_g">0 g</string>
    <string name="recommended_70_g">Recommended: 70 g</string>
    <string name="recommended_30_g">Recommended: 30 g</string>
    <string name="recommended_50_g">Recommended: 50 g</string>
    <string name="select_meal_time">Select meal time</string>
    <string name="select_meal_type">Select meal type</string>
    <string name="search_for_food">Search for food</string>
    <string name="_20ml">+20ml</string>
    <string name="great_job_keeping_active">Great job keeping active!</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="_200ml">+200ml</string>
    <string name="ask_a_question">Ask a question...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight_progress">Weight Progress</string>
    <string name="next">Next</string>
    <string name="daily_nutrient_intake_summary">Daily Nutrient Intake Summary</string>
    <string name="enter_food">Enter Food</string>
    <string name="review">Review</string>
    <string name="stay_signed_in">Stay signed in</string>
    <string name="step_history">Step History</string>
    <string name="exercise_videos">Exercise Videos</string>
    <string name="water_intake_details">Water Intake Details</string>
    <string name="enter_calories">Enter Calories</string>
    <string name="track_weight">Track Weight</string>
    <string name="permission_required">Permission Required</string>
    <string name="this_app_needs_permission_to_schedule_exact_alarms_for_meal_reminders_would_you_like_to_enable_it_in_settings">This app needs permission to schedule exact alarms for meal reminders. Would you like to enable it in settings?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="chatbot">ChatBot</string>
    <string name="home">Home</string>
    <string name="videos">Videos</string>
    <string name="profile">Profile</string>
    <string name="track_your_weight">Track Your Weight</string>
    <string name="enter_your_current_weight">Enter your current weight</string>
    <string name="save_weight">Save Weight</string>
</resources>