<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:material="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_background"
    tools:context=".BurntCaloriesDetailsActivity">

    <!-- AppBar / Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_500"
            app:title="Calories Burned"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Card for Overview -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardCaloriesOverview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/purple_500">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/totalCaloriesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_burned"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/totalCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_kcal"
                android:textStyle="bold"
                android:textSize="36sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/caloriesDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/great_job_keeping_active"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Card for Line Chart -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLineChart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardCaloriesOverview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <!-- Line Chart for historical calories burned -->
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:background="@color/gray"
            android:padding="8dp"/>
    </com.google.android.material.card.MaterialCardView>

    <!-- Tab Layout for Daily/Weekly/Monthly View -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/material_background"
        app:tabIndicatorColor="@color/purple_500"
        app:tabSelectedTextColor="@color/purple_500"
        app:tabTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/cardLineChart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
