<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_background"
    tools:context=".SettingsActivity">

    <!-- Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            app:title="Settings"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
            android:background="@color/purple_500"/>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Profile Picture -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_account_circle_24"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- User Email -->
    <TextView
        android:id="@+id/user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Steps Goal Setting -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/steps_goal_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/user_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/daily_step_goal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/steps_goal_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/black"
            android:backgroundTint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Water Goal Setting -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/water_goal_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/steps_goal_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/water_intake_goal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/water_goal_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:backgroundTint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Calorie Goal Setting -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calorie_goal_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/water_goal_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/daily_calorie_goal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calorie_goal_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Biometric Authentication Toggle -->
    <LinearLayout
        android:id="@+id/biometric_authentication_toggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/calorie_goal_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enable_biometric_authentication"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <Switch
            android:id="@+id/biometric_authentication_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumbTint="@color/black"
            android:trackTint="@color/black"
            tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />
    </LinearLayout>


    <!-- Save Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="24dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        app:icon="@drawable/baseline_save_alt_24"
        app:layout_constraintTop_toBottomOf="@id/biometric_authentication_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="8dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp" />



</androidx.constraintlayout.widget.ConstraintLayout>
